force-app/main/default/objects/Account/fields/BillingCountryNoSpace__c.field-meta.xml
<CustomField>
    <fullName>BillingCountryNoSpace__c</fullName>
    <formula>SUBSTITUTE( BillingCountry , &quot; &quot;, &quot;%20&quot;)</formula>
    <label>BillingCountryNoSpace</label>
    <type>Text</type>
</CustomField>