force-app/main/default/objects/Account/fields/DaysSinceCheck__c.field-meta.xml
<CustomField>
    <fullName>DaysSinceCheck__c</fullName>
    <formula>TODAY()  -  QtrlyCheckDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Quarterly Check</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>