force-app/main/default/objects/Account/fields/QtrlyCheckDate__c.field-meta.xml
<CustomField>
    <fullName>QtrlyCheckDate__c</fullName>
    <label>Quarterly Check Date</label>
    <type>Date</type>
</CustomField>