force-app/main/default/objects/Account/validationRules/Bypass_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Bypass_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>!$Setup.Global_Validation_Rules_Exception__c.Run_Validation_Rules__c==false &amp;&amp; ISCHANGED(Name)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Account Name cannot be changed</errorMessage>
</ValidationRule>